--- a/package.json
+++ b/package.json
@@ -1,26 +1,33 @@
 {
-  "name": "e-commerce",
+  "name": "sequelize-dh",
   "version": "1.0.0",
-  "description": "Projeto integrador do grupo 02",
-  "main": "index.js",
+  "description": "",
+  "main": "app.js",
   "scripts": {
-    "start": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon src/app"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Rafadmartins/e-commerce.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Rafadmartins/e-commerce/issues"
-  },
-  "homepage": "https://github.com/Rafadmartins/e-commerce#readme",
+  "author": "leandroguitarjesus89@gmail.com",
+  "license": "MIT",
   "dependencies": {
+    "axios": "^0.23.0",
+    "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
-    "nodemon": "^2.0.13",
+    "express-jwt": "^6.1.0",
+    "express-session": "^1.17.2",
+    "express-validator": "^6.13.0",
+    "jest": "^27.3.1",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.3",
+    "mysql2": "^2.3.2",
     "sequelize": "^6.7.0"
+  },
+  "devDependencies": {
+    "express-generator": "^4.16.1",
+    "nodemon": "^2.0.14",
+    "sequelize-cli": "^6.2.0"
   }
 }
