--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "sequelize-dh",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/app"
+    "dev": "nodemon src/server"
   },
   "author": "leandroguitarjesus89@gmail.com",
   "license": "MIT",
