--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "multer": "^1.4.3",
     "mysql2": "^2.3.2",
     "sequelize": "^6.8.0",
-    "sqlite3": "^5.0.2"
+    "sqlite3": "^5.0.2",
+    "uuidv4": "^6.2.12"
   },
   "devDependencies": {
     "express-generator": "^4.16.1",
