--- a/.sequelizerc
+++ b/.sequelizerc
@@ -1,8 +1,7 @@
 const path = require('path');
 
 module.exports = {
-    'config': path.resolve('src', 'config', 'database.json'),
+    'config': path.resolve('src', 'config', 'config.js'),
     'migrations-path': path.resolve('src', 'database', 'migrations'),
-    'models-path': path.resolve('src', 'database', 'models'),
-    'seeders-path': path.resolve('src', 'database', 'seeders')
+    'models-path': path.resolve('src', 'models')
 }
