--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "koa": "^2.13.4",
     "koa-bodyparser": "^4.3.0",
     "koa-router": "^10.1.1",
+    "method-override": "^3.0.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.3",
     "mysql2": "^2.3.2",
