--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@koa/cors": "^3.1.0",
     "axios": "^0.23.0",
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "boom": "^7.3.0",
     "cookie-parser": "^1.4.5",
